<resources>

    <string name="app_name">RoboSpice motivations</string>
    <string name="menu_information">Information</string>
    <string name="text_start">Start</string>
    <string name="text_cancel">Cancel</string>
    <string name="text_clear">Clear cache</string>
    <string name="text_delay">Delay requests by 10 seconds</string>
    <string name="text_tweets">Recent tweets about Android :</string>
    <string name="title_activity_main">RoboSpice motivations</string>
    <string name="text_available_memory">Available memory : %s Kb</string>
    <string name="text_async_task_example">AsyncTask example</string>
    <string name="text_loader_example">Loader example</string>
    <string name="text_networking_example">Networking example</string>

    <!-- async task as an inner class of the activity -->
    <string name="text_basic_async_task_name">Inner class of an activity</string>

    <!-- async task as a static inner class of the activity -->
    <string name="text_async_task_static_inner_class_name">Static inner class of an activity</string>

    <!-- async task with a weak reference on the activity -->
    <string name="text_async_task_weakreference_name">Static inner class using a weak reference on an activity</string>

    <!-- a basic loader -->
    <string name="text_loader_name">Basic loader usage example</string>

    <!-- a loader with progress -->
    <string name="text_loader_with_progress_name">Loader with progress</string>

    <!-- a loader for rest content -->
    <string name="text_loader_rest_name">Loader for a REST request</string>

    <!-- a robospice rest json request -->
    <string name="text_spice_rest_name">RoboSpice REST json request</string>

    <!-- a robospice rest xml request -->
    <string name="text_spice_rest_xml_name">RoboSpice REST xml + orm lite request</string>
    
    <!-- a robospice image request -->
    <string name="text_spice_image_name">RoboSpice binary request</string>
    <string name="text_image_spice_main">Image loaded via RoboSpice</string>

    <!-- RoboAsyncTask -->
    <string name="text_roboasynctask_name">Basic RoboAsyncTask, from RoboGuice </string>
    <string name="text_empty_image">Click the info button in the action bar to learn more</string>

</resources>