<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <Button
        android:id="@+id/button_start"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="onStartButtonClick"
        android:text="@string/text_start" />

    <Button
        android:id="@+id/button_cancel"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button_start"
        android:onClick="onCancelButtonClick"
        android:text="@string/text_cancel" />

    <Button
        android:id="@+id/button_clear"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button_cancel"
        android:onClick="onClearButtonClick"
        android:text="@string/text_clear" />

    <TextView
        android:id="@id/textView_memory"
        style="@android:style/TextAppearance.Large.Inverse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_start"
        android:text="@string/text_available_memory" />

    <ProgressBar
        android:id="@id/progressBar"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="fill_parent"
        android:layout_height="80dp"
        android:layout_below="@+id/textView_memory" />

    <TextView
        android:id="@+id/textView_empty"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/progressBar"
        android:background="@android:color/white"
        android:singleLine="false"
        android:gravity="center"
        style="@android:style/TextAppearance.Large.Inverse"
        android:text="@string/text_empty_image" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressBar"
        android:visibility="gone"
        android:background="@android:color/darker_gray" >

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/imageView_main"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:contentDescription="@string/text_image_spice_main"
                android:scaleType="center" />
        </HorizontalScrollView>
    </ScrollView>

</RelativeLayout>