<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/white" >

    <Button
        android:id="@+id/button_start"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:onClick="onStartButtonClick"
        android:text="@string/text_start" />

    <Button
        android:id="@+id/button_cancel"
        style="@android:style/Widget.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button_start"
        android:onClick="onCancelButtonClick"
        android:text="@string/text_cancel" />

    <CheckBox
        android:id="@+id/checkbox_delay"
        style="@android:style/Widget.CompoundButton.CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/button_cancel"
        android:text="@string/text_delay"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView_memory"
        style="@android:style/TextAppearance.Large.Inverse"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_start"
        android:text="@string/text_available_memory" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/textView_memory"
        android:orientation="vertical" >

        <WebView
            android:id="@+id/webView_explanation"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/background_dark" >

            <TextView
                android:id="@+id/textView_result_header"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_alignParentLeft="true"
                android:text="@string/text_tweets" />

            <TextView
                android:id="@+id/textView_request_progress"
                style="?android:attr/listSeparatorTextViewStyle"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/textView_result_header"
                android:gravity="right|center_vertical"
                android:textSize="10sp" />
        </RelativeLayout>

        <ListView
            android:id="@+id/listView_tweets"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

</RelativeLayout>